# CyberAcademicAssistant

./: .gitignore  CLAUDE.md  README.md  crawl_all.sh  enrich_abstracts.py  export_all.py  ndss_crawler.py  pyproject.toml  verify_links.py
.github/workflows/: verify.yml
agent/: .env.example  README.md  app.py  llm_client.py  paper_store.py  pdf_export.py  pdf_utils.py  requirements.txt
agent/agents/: __init__.py  base.py  chat.py  debate.py  literature.py  quiz.py
agent/data/: sessions.json
agent/static/: app.js  style.css
agent/templates/: index.html
crawlers/: ccs_crawler.py  ndss_crawler.py  sp_crawler.py  usenix_crawler.py
