[project]
name = "4th-cyber-security-conference"
version = "0.1.0"
description = "网络安全四大顶会论文爬虫与学术智能体平台"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
agent = [
    "flask>=3.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pymupdf>=1.24",
]
